Wed Jan 27 16:34:35 2016  boshan  <boshan@subsplash.com>

	* lib/tempfile.rb (Tempfile#initialize): [DOC] the first parameter
	  `basename` is optional and defaulted to an empty string since
	  [GH-523].  [Fix GH-1225]

Wed Jan 27 16:25:54 2016  Koichi ITO  <koic.ito@gmail.com>

	* array.c (rb_ary_dig): [DOC] fix the exception class to be raised
	  when intermediate object does not have dig method.  TypeError
	  will be raised now.  [Fix GH-1224]

Tue Jan 26 19:36:15 2016  Aggelos Avgerinos  <evaggelos.avgerinos@gmail.com>

	* array.c (permute0, rpermute0): [DOC] Substitute indexes ->
	  indices in documentation for consistency.  [Fix GH-1222]

Tue Jan 26 15:21:37 2016  Eric Wong  <e@80x24.org>

	* compile.c (caller_location): use rb_fstring_cstr for "<compiled>"
	  (it is converted to fstring anyways inside rb_iseq_new_with_opt)
	* iseq.c (iseqw_s_compile): ditto
	* iseq.c (rb_iseq_new_main): use rb_fstring_cstr for "<main>"
	* vm.c (Init_VM): ditto, share with with above
	* iseq.c (iseqw_s_compile_file): rb_fstring before rb_io_t->pathv
	  share "<main>" with above
	* vm.c (rb_binding_add_dynavars): fstring "<temp>" immediately

Tue Jan 26 15:14:01 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* compile.c (iseq_peephole_optimize): don't apply tailcall
	  optimization to send/invokesuper instructions with blockiseq.
	  This is a follow-up to the changes in r51903; blockiseq is now
	  the third operand of send/invokesuper instructions.
	  [ruby-core:73413] [Bug #12018]

Tue Jan 26 14:26:46 2016  Eric Wong  <e@80x24.org>

	* signal.c (sig_list): use fstring for hash key
	* test/ruby/test_signal.rb (test_signal_list_dedupe_keys): added

Tue Jan 26 13:08:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_f_kill): should immediately deliver reserved
	  signals SIGILL and SIGFPE, not only SIGSEGV and SIGBUS.

Tue Jan 26 07:57:28 2016  Joseph Tibbertsma  <josephtibbertsma@gmail.com>

	* gc.c (RVALUE_PAGE_WB_UNPROTECTED): fix a typo of argument name.
	  [Fix GH-1221]